--- a/es. 7 - classe automobile/es. 7 - classe automobile.csproj
+++ b/es. 7 - classe automobile/es. 7 - classe automobile.csproj
@@ -59,6 +59,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <Compile Include="Properties\Automobile.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
