--- a/es. 7 - classe automobile/es. 7 - classe automobile.csproj
+++ b/es. 7 - classe automobile/es. 7 - classe automobile.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Automobile.cs" />
+    <Compile Include="AutomobileCambioautomatico.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
